tdf#104995: Fix opposite cropping issue on flipped images in Writer

In Writer, cropping an flipped image crops the
opposite side of the image instead of the
selected side.

Fix: update crop values after the flipping(mirroring).

Change-Id: I55cfed086bbf63b0c516e1cb6b2624c02b04a6da